--- a/WineryApplication/src/main/resources/com/oopproject/wineryapplication/Log.fxml
+++ b/WineryApplication/src/main/resources/com/oopproject/wineryapplication/Log.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oopproject.wineryapplication.LogController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oopproject.wineryapplication.controller.LogController">
    <right>
       <AnchorPane fx:id="placeHolderAnchPane" prefHeight="380.0" prefWidth="240.0" BorderPane.alignment="CENTER">
          <children>
