--- a/WineryApplication/src/main/resources/com/oopproject/wineryapplication/DisplayBase.fxml
+++ b/WineryApplication/src/main/resources/com/oopproject/wineryapplication/DisplayBase.fxml
@@ -10,6 +10,6 @@
         <columns>
         </columns>
       </TableView>
-      <Button fx:id="add" layoutX="23.0" layoutY="410.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="102.0" text="Add" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="475.0" AnchorPane.topAnchor="410.0" />
+      <Button fx:id="add" layoutX="23.0" layoutY="410.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="102.0" text="Add" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="23.0" />
    </children>
 </AnchorPane>
