--- a/WineryApplication/src/main/resources/com/oopproject/wineryapplication/Wellcome.fxml
+++ b/WineryApplication/src/main/resources/com/oopproject/wineryapplication/Wellcome.fxml
@@ -35,7 +35,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
-              <Button fx:id="btnCEO" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#switchToUser" prefHeight="100.0" prefWidth="220.0" text="CEO" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+              <Button fx:id="btnCEO" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#switchToLogin" prefHeight="100.0" prefWidth="220.0" text="CEO" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                   <graphic>
                       <FontAwesomeIcon fill="#2d75e8" glyphName="USER" size="50" />
                   </graphic>
