--- a/WineryApplication/src/main/resources/com/oopproject/wineryapplication/User.fxml
+++ b/WineryApplication/src/main/resources/com/oopproject/wineryapplication/User.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -30,7 +31,15 @@
          <left>
             <AnchorPane prefHeight="779.0" prefWidth="156.0" style="-fx-background-color: #004B49;" BorderPane.alignment="CENTER">
                <children>
-                  <VBox fx:id="placeHolderVBox" prefHeight="200.0" prefWidth="100.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                  <ScrollPane prefHeight="68.0" prefWidth="146.0" AnchorPane.bottomAnchor="437.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="124.0">
+                           <children>
+                              <VBox fx:id="placeHolderVBox" layoutX="22.0" layoutY="-29.0" maxHeight="-Infinity" prefHeight="276.0" prefWidth="146.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </ScrollPane>
                   <Button alignment="TOP_LEFT" graphicTextGap="5.0" layoutX="31.0" layoutY="740.0" mnemonicParsing="false" style="-fx-background-color: #004B49;" text="Sign Out" textFill="WHITE" underline="true" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
                      <graphic>
                         <FontAwesomeIcon fill="#0c9010" glyphName="SIGN_OUT" size="2em" wrappingWidth="39.0" />
