--- a/WineryApplication/src/main/resources/com/oopproject/wineryapplication/EditBase.fxml
+++ b/WineryApplication/src/main/resources/com/oopproject/wineryapplication/EditBase.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="AddBase" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="EditBase" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <VBox fx:id="entityProps" alignment="TOP_CENTER" layoutX="24.0" layoutY="14.0" prefHeight="200.0" prefWidth="550.0" AnchorPane.bottomAnchor="185.99999999999997" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="25.600000000000023" AnchorPane.topAnchor="14.0">
    </VBox>
 
