--- a/WineryApplication/src/main/resources/com/oopproject/wineryapplication/Log.fxml
+++ b/WineryApplication/src/main/resources/com/oopproject/wineryapplication/Log.fxml
@@ -14,15 +14,15 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="366.0" prefWidth="645.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oopproject.wineryapplication.controller.LogController">
    <children>
-      <PasswordField fx:id="password" layoutX="38.0" layoutY="208.0" prefHeight="25.0" prefWidth="219.0" promptText="Password" AnchorPane.leftAnchor="38.0" />
+      <PasswordField fx:id="password" layoutX="38.0" layoutY="208.0" prefHeight="25.0" prefWidth="219.0" promptText="Password" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="388.0" />
       <ImageView fitHeight="69.0" fitWidth="79.0" layoutX="93.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="93.0" AnchorPane.topAnchor="14.0" />
-      <TextField fx:id="employeeName" layoutX="38.0" layoutY="164.0" prefHeight="25.0" prefWidth="219.0" promptText="Username" AnchorPane.leftAnchor="38.0">
+      <TextField fx:id="employeeName" layoutX="38.0" layoutY="164.0" prefHeight="25.0" prefWidth="219.0" promptText="Username" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="388.0">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </TextField>
       <Button layoutX="38.0" layoutY="302.0" mnemonicParsing="false" onAction="#switchToUser" prefHeight="37.0" prefWidth="219.0" text="Login" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="38.0" />
-      <Label fx:id="lblEnterCredentials" alignment="CENTER" layoutX="38.0" layoutY="105.0" prefHeight="49.0" prefWidth="219.0" textFill="#be0a16" wrapText="true" AnchorPane.leftAnchor="38.0" AnchorPane.topAnchor="105.0">
+      <Label fx:id="lblEnterCredentials" alignment="CENTER" layoutX="38.0" layoutY="105.0" prefHeight="49.0" prefWidth="219.0" textFill="#be0a16" wrapText="true" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="388.0" AnchorPane.topAnchor="105.0">
          <font>
             <Font size="20.0" />
          </font>
@@ -36,7 +36,7 @@
             <Image url="@../../../Pictures/download.jpg" />
          </image>
       </ImageView>
-      <Line endX="7.0" endY="191.0" layoutX="315.0" layoutY="147.0" startX="7.0" startY="-116.0" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="321.5" AnchorPane.rightAnchor="322.0" AnchorPane.topAnchor="30.5" />
+      <Line endX="7.0" endY="191.0" layoutX="315.0" layoutY="147.0" startX="7.0" startY="-116.0" AnchorPane.rightAnchor="322.0" />
       <Button fx:id="btnGoBack" layoutX="351.0" layoutY="302.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="254.0" text="Go Back" AnchorPane.bottomAnchor="27.0" AnchorPane.rightAnchor="40.0" />
    </children>
 </AnchorPane>
