--- a/WineryApplication/src/main/resources/com/oopproject/wineryapplication/User.fxml
+++ b/WineryApplication/src/main/resources/com/oopproject/wineryapplication/User.fxml
@@ -4,7 +4,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -30,36 +29,28 @@
       </AnchorPane>
       <BorderPane layoutY="26.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="26.0">
          <left>
-            <AnchorPane prefHeight="779.0" prefWidth="156.0" style="-fx-background-color: #004B49;" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="510.0" prefWidth="188.0" style="-fx-background-color: #004B49;" BorderPane.alignment="CENTER">
                <children>
                   <Label layoutX="5.0" layoutY="20.0" text="Categories:" textFill="WHITE" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <font>
                         <Font name="Gabriola" size="24.0" />
                      </font>
                   </Label>
-                  <ScrollPane prefHeight="100.0" prefWidth="146.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="50.0">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="124.0">
-                           <children>
-                              <VBox fx:id="placeHolderVBoxCat" layoutX="22.0" layoutY="-29.0" maxHeight="-Infinity" prefHeight="276.0" prefWidth="146.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                           </children>
-                        </AnchorPane>
-                    </content>
-                  </ScrollPane>
-                  <Label layoutX="106.0" layoutY="225.0" text="Notifications:" textFill="WHITE" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+                <AnchorPane layoutX="5.0" layoutY="50.0" minHeight="0.0" minWidth="0.0" prefHeight="168.0" prefWidth="163.0" AnchorPane.bottomAnchor="292.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="50.0">
+                     <children>
+                        <VBox fx:id="placeHolderVBoxCat" layoutX="22.0" layoutY="-29.0" maxHeight="-Infinity" prefHeight="276.0" prefWidth="146.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     </children>
+                  </AnchorPane>
+                  <Label layoutX="106.0" layoutY="225.0" text="Operations:" textFill="WHITE" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <font>
                         <Font name="Gabriola" size="24.0" />
                      </font>
                   </Label>
-                  <ScrollPane layoutX="5.0" layoutY="257.0" prefHeight="100.0" prefWidth="146.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="257.0">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="124.0">
-                           <children>
-                              <VBox fx:id="placeHolderVBoxNtf" layoutX="22.0" layoutY="-29.0" maxHeight="-Infinity" prefHeight="276.0" prefWidth="146.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </ScrollPane>
+                  <AnchorPane layoutX="5.0" layoutY="258.0" minHeight="0.0" minWidth="0.0" prefHeight="181.0" prefWidth="178.0" AnchorPane.bottomAnchor="71.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="258.0">
+                     <children>
+                        <VBox fx:id="placeHolderVBoxNtf" layoutX="22.0" layoutY="-29.0" maxHeight="-Infinity" prefHeight="276.0" prefWidth="162.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     </children>
+                  </AnchorPane>
                   <Button fx:id="btnLogOut" alignment="TOP_LEFT" graphicTextGap="5.0" layoutX="31.0" layoutY="740.0" mnemonicParsing="false" style="-fx-background-color: #004B49;" text="Log Out" textFill="WHITE" underline="true" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
                      <graphic>
                         <FontAwesomeIcon fill="#0c9010" glyphName="SIGN_OUT" size="2em" wrappingWidth="39.0" />
