--- a/WineryApplication/src/main/resources/com/oopproject/wineryapplication/Operations.fxml
+++ b/WineryApplication/src/main/resources/com/oopproject/wineryapplication/Operations.fxml
@@ -17,7 +17,7 @@
                      <children>
                         <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <Label text="Please select order by ID:" />
+                              <Label text="Please select by ID:" />
                               <TextField fx:id="orderNameTextField" />
                               <Button fx:id="selectOrderButton" mnemonicParsing="false" text="Button" />
                            </children>
@@ -28,7 +28,7 @@
                <center>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                      <children>
-                        <VBox fx:id="operationsPane" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
+                        <VBox fx:id="operationsVbox" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
                      </children>
                   </AnchorPane>
                </center>
